modify jwt cookie filter